--- a/app/views/home/business-model.html.erb
+++ b/app/views/home/business-model.html.erb
@@ -1,21 +1,36 @@
-<body><div class="container-fluid">
-	<table style="width:100%">
-<div id="left"><h3>Business<br>Model</h3></div>
-<div id="right" >
-	<a href="hackthehouse" class="btn">Go BACK</a>
+<body>
+	<div class="container-fluid">
+		<table style="width:100%">
+			<div id="left">
+				<h3>Business<br>Model</h3>
+			</div>
+		<div id="right" >
+			<a href="hackthehouse" class="btn">Go BACK</a>
+		</div>
+		<div class="clear"></div>
+		</table>
+
+		<div class="row">
+			<div class="col-md-2" id="menuleft" >
+				<a class="activ" href="business-model" >
+					<h4>Infographic</h4>
+				</a>
+				<a class="tools" target="_blank" href="http://www.entrepreneur.com/article/233451">
+					<h4>6 Great Business Models</h4>
+				</a>
+				<a class="tools" target="_blank" href="http://www.entrepreneur.com/article/223264">
+					<h4>The Business Model for disruption</h4>
+				</a>
+			</div>
+
+			<div class="col-md-10">
+				<div class="insidecontent" >
+				  	<div class="brief">
+						<img src="images/businessmodel.jpg" style="max-width:800px;" alt="..." title="" class="left">
+	 				</div>
+				</div>
+			</div>
+		</div>
 	</div>
-<div class="clear"></div>
-</table>
-   
-
-<div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
-	</div>
-	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
-
-
-</div>
-</div>
 </body>
+
