--- a/app/views/home/criteria.html.erb
+++ b/app/views/home/criteria.html.erb
@@ -12,6 +12,7 @@
 		<a id="b4" href="brief" ><h4>Brief</h4></a>
 		<a id="b1" href="agenda" ><h4>Agenda</h4></a>
 		<a id="b1" href="checklist"><h4>Check List</h4></a>
+		<a id="b2" href="judges"  ><h4>Judges</h4></a>
 		<a id="b2" href="criteria" class="activ" ><h4>Criteria</h4></a>
 		<a id="b3" href="prizes" ><h4>Prizes</h4></a>
 	</div>
