--- a/app/views/home/customer-validation.html.erb
+++ b/app/views/home/customer-validation.html.erb
@@ -6,15 +6,58 @@
 	</div>
 <div class="clear"></div>
 </table>
-   
-<div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
+<div class="col-md-2" id="menuleft" >
+		<a id="b4" class="activ" href="customer-validation" ><h4>Talk to people</h4></a>
+		<a id="b4" class="tools" target="_blank" href="http://theleanstartup.com/principles" ><h4>The Lean Startup</h4></a>	
+		<a id="b4" class="tools" target="_blank" href="https://twitter.com/" ><h4>Twitter</h4></a>
+
+
+
 	</div>
-	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
+
+<div class="col-md-10">
+<div class="insidecontent" >
+	 		
+	 	
+
+	 		<div class="checkout">"Get people to know<br>what you're talking about!"</div>
+	 		<div class="brief">
+	 		<span class="italic" style="text-align:center;">_____<br>Posted on September 30, 2014 by Sebastian Steins</span><br><span class="italic">We found Sebastian's advices on <a href="http://seb.st/how-to-win-a-hackathon/" style="color:#fff;" target="_blank">Seb.st</a></span>
+	 		</div>
 
 
+	 		<div class="brief"><h2 class="pages">Talk the hell to people</h2><br>
+
+Talk to everyone you may know (or find). Ask them what they think of your product, ask them what they would be willing to pay for your solution. 
+<br><br>Find people complaining about the problems your product solves in discussion forums or Facebook groups!
+Try to get some feedback from companies if you're building a B2B product. Tweet to them, odds are, you will get a feedback if you start a conversation on Twitter with them. Politely ask if they would agree to a short(!) telephone call. When they agree and you are in good terms with your conversation partner, you can now ask nearly everything: Ask for a retweet, for example! You cannot have a more trustworthy proof of authentic interest than that!</div>
+<br><br>
+<div class="checkout">"Always, always, validate!<br>Validate the concept before and<br>validate the concept after!"</div>
+	 		<div class="brief">
+	 		<span class="italic" style="text-align:center;">_____<br>Posted on February 12, 2015 by Gary-Yau Chan</span><br><span class="italic">We found Gary-Yau's advices on <a href="https://medium.com/@garyyauchan/ultimate-8-step-guide-to-winning-hackathons-84c9dacbe8e" style="color:#fff;" target="_blank">Medium.com</a></span>
+	 		</div>
+
+
+	 		<div class="brief"><h2 class="pages">Before Hacking</h2><br>
+
+This is where business development person is crucial. Unlike engineers, they know the product does not speak for itself. BizDev people know they need to convince people to use it. Assign them the task to get some tallies on the idea and speak with the customers. Type up these notes for the presentation, as it is one of the secret ingredients to your storytelling.</div>
+
+<div class="brief"><h2 class="pages">After Hacking</h2><br>
+
+Spend the second-day getting out of the building and talking with potential customers again. This time have the BizDev person interview the customer. You can even take pictures of the customer and your team member together. Having at least 2 of these artifacts shows the judge that you:<br><br>
+    1.    Dare to take the next step on customer validation<br>
+    2.    Used the Lean Startup methodology in some fashion<br>
+    3.    Used a data-driven strategy<br>
+    4.    Customer approval and ready for trial</div>
+	 	
+
+	 		
+
+
+			</div>
+
+
+	 
+
 </div>
-</div>
-</body>
+</div></body>
