--- a/app/views/home/demo.html.erb
+++ b/app/views/home/demo.html.erb
@@ -1,6 +1,6 @@
 <body><div class="container-fluid">
 	<table style="width:100%">
-<div id="left"><h3>Demo</h3></div>
+<div id="left"><h3>Demo / Pitch<br>Presentation</h3></div>
 <div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
 	</div>
@@ -9,13 +9,42 @@
    
 
 <div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
-	</div>
-	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
 
+	<div class="col-md-2" id="menuleft" >
+		<a id="b4" class="activ" href="demo" ><h4>Test your app</h4></a>
+		<a id="b1" href="pitch-presentation"><h4>Pitch your idea</h4></a>
+		<a id="b1" class="tools" href="https://www.emaze.com/" target="_blank"><h4>Use EMaze</h4></a>
+		<a id="b1" class="tools" href="https://prezi.com/" target="_blank"><h4>Or Prezi</h4></a>
+
+	</div>
+
+	 <div class="col-md-10">
+<div class="insidecontent" >
+	 		
+	 		<div class="brief"><h2 class="pages">Is the objective of the web app clear ?</h2><br>Let's assume you are designing a web app to show financial information of the latest stock trades. Is that information apparent at first when you look at the web app or is there any disconcerting information which is distracting the user from the focus of the app.</div>
+
+	 		<div class="brief"><h2 class="pages">Are all the goals of the app satisfied ?</h2><br>This point is a continuation of the previous point. In this point I would recommend establishing all the goals which the app has set out to do are satisfied or not and if they are not satisfied, what are the unique cases in which the app fails and if we should consider those unique cases or not.</div>
+
+	 		<div class="brief"><h2 class="pages">Is the user able to navigate to the content in the app without knowing any shortcuts ?</h2><br>Though it is always useful to incorporate shortcuts not all users would be aware of them and there must be an easy and intutive way for users to navigate to the content in the app without having to know specific shortcuts.</div>
+
+	 		<div class="brief"><h2 class="pages">Have visual design standards been followed to ensure the app is readable and understandable ?</h2><br>Though you might have fantastic content if your design standards are not good, you might end up with an app which is really unreadable and difficult to comprehend. Hence check if your design standards enable users to use your under a number of different circumstances (also check for potential cases like color blindness or where the user might need larger text to understand the content on the app). Also ensure that your visual guidelines enforce your branding guidelines and keep a consistent design throughout</div>
+
+	 		<div class="brief"><h2 class="pages">Check if your app has a consistent navigation layout.</h2><br>Ensure your app has a consistent navigation layout which is common across all the pages of the app leading to little or no confusion about the sudden change in navigation. Also ensure users can quickly jump from one section to another easily without having to find their way around.</div>
+
+	 		<div class="brief"><h2 class="pages">Check for Browser/platform compatibility.</h2><br>Since you are going to be creating a web app ensure there is browser compatibility with all major browsers and potential browsers your users might use.If you feel that there is a also scope for the app to accessed through mobile devices, ensure your app scales well to those platforms too.</div>
+
+	 		<div class="brief"><h2 class="pages">Check for load testing.</h2><br>To ensure your app can stand up to user requirements in cases of heavy loads</div>
+
+	 		<div class="brief"><h2 class="pages">Check to ensure that all your links work well. </h2><br>If any of your links lead to a dead page or a 404 page, ensure the user has a way to get back from there or navigate from that place to another point in the site.<br><br><span class="italic"><br>_____<br>Info curated & inspired from Entrepreneur.com</span></div>
+	 		
+
+
+			</div>
+
+
+	 	</div>
 
 </div>
 </div>
 </body>
+
