--- a/app/views/home/design.html.erb
+++ b/app/views/home/design.html.erb
@@ -6,16 +6,63 @@
 	</div>
 <div class="clear"></div>
 </table>
-   
+<div class="col-md-2" id="menuleft" >
+		<a id="b4" class="activ" href="design" ><h4>Value design</h4></a>
+		<a id="b4" class="tools" href="https://hackdesign.org/lessons" target="_blank" ><h4>Hackdesign</h4></a>
+		<a id="b4" class="tools" href="http://tympanus.net/codrops/" target="_blank" ><h4>Codrops</h4></a>
+		<a id="b4" class="tools" href="https://color.adobe.com/" target="_blank" ><h4>Adobe Color</h4></a>
+		<a id="b4" class="tools" href="https://dribbble.com/" target="_blank" ><h4>Dribbble</h4></a>
 
-<div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
+
+
 	</div>
-	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
+
+<div class="col-md-10">
+<div class="insidecontent" >
+	 		
+	 	
+
+	 		<div class="checkout">"Value design:<br>It is evident from most hackathons that design is a game-changer.<br>Not only how beautiful your application is,<br>but how the user experience is!"
+			</div>
+	 		<div class="brief">
+	 		<span class="italic" style="text-align:center;">_____<br>Posted on February 12, 2015 by Gary-Yau Chan</span><br><span class="italic">We found Gary-Yau's advices on <a href="https://medium.com/@garyyauchan/ultimate-8-step-guide-to-winning-hackathons-84c9dacbe8e" style="color:#fff;" target="_blank">Medium.com</a></span>
+	 		</div>
 
 
+	 		<div class="brief"><h2 class="pages">Front-End Engineer / Designer</h2><br>
+
+Outside of rare exceptions, an obvious position within a team is at least one Front-End Engineer / Designer. They are very valuable because front-end engineers carry the design from idea to conception and you need to execute a beautiful UI and UX in only 24 hours. Your team only has one attempt. It cannot be too experimental because it would be difficult to code. It cannot have too many features because there is not enough time to showcase it all during presentation. Just optimize for 1 to 2 primary features to maximize the judges WOW factor.
+
 </div>
+<br><br>
+<div class="brief">
+	 		<span class="italic" style="text-align:center;">_____<br>Posted on October 24, 2014 by Jim Lane</span><br><span class="italic">We found Jim's advices on <a href="https://www.addthis.com/blog/2014/10/24/8-basic-design-tips-for-new-websites/#.VfIR_p1Viko" style="color:#fff;" target="_blank">Medium.com</a></span>
+	 		</div>
+
+
+	 		<div class="brief"><h2 class="pages">Keep it Simple</h2><br>
+
+Whether you’re thinking about your home page, navigation, or content, keep it simple. Don’t make it hard to your visitors to find what they’re looking for. If you want visitors to press a button or fill out a form, don’t make them scroll to find it. Make it easy to find, and use your site’s navigation.<br><br>
+
+If you have a particular goal in mind, you can even invite visitors to do something, right when they arrive at your site. Now that’s simple!</div>
+
+			<div class="brief"><h2 class="pages">Keep it Concise</h2><br>Shorter content is easier to read, and will get your point across more quickly. See?</div>
+
+			<div class="brief"><h2 class="pages">Header Hierarchy</h2><br>Be sure to use a consistent hierarchy of headers. In HTML, these look like H1, H2, H3, and so forth. These headers convey the structure of your content, helping readers understand how your content is organized. Think about this structure when choosing font sizes and weights, so that an H3 doesn’t look more visually prominent than its parent H2.</div>
+
+			<div class="brief"><h2 class="pages">White Space is Your Friend</h2><br>Provide some room between lines of text and set up borders on the sides of your pages to keep content from becoming too wide and hard to read. Allow some space around pictures. These strategies allow visitors’ eyes to visually organize and scan your content more easily.</div>
+
+			<div class="brief"><h2 class="pages">Speaking of Colors . . .</h2><br>Use restraint—your visitors will thank you. Pick a primary color that will provide the foundation of your design, then pick a contrasting accent color for important buttons and other interface elements. Use tools like Adobe Color to explore different combinations of colors that look great together.</div>
+
+			<div class="brief"><h2 class="pages">Make it Easy to Stay</h2><br>Sometimes visitors arrive at your home page, but often search results or other links bring them to some other page in your site. Be sure to provide links in your content, and offer content recommendations to suggest other pages to read next. This invites visitors to stay longer and view more of what your site has to offer.</div>
+
+			<div class="brief"><h2 class="pages">Make it Easy to Share</h2><br>While content recommendations keep your current visitors around longer, sharing will invite new visitors to come to your site. Think about how sharing tools fit into your new design. They can float on the side your pages (remember those borders you created?) or can appear within your content, at the beginning or end of an article. Check out these best practices for more suggestions.</div>
+
+			<div class="brief"><h2 class="pages">Make it Easy to Follow</h2><br>Don’t forget to invite visitors to follow you on Facebook, Twitter and other social networks. This helps bring visitors back, and is a great way to know who your most loyal audience is—which, as our data shows, is very valuable.</div>
+
+			</div>
+	
+
 </div>
-</body>
+</div></body>
+
