--- a/app/views/home/hackthehouse.html.erb
+++ b/app/views/home/hackthehouse.html.erb
@@ -1,9 +1,8 @@
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron"><br>
   <img src="images/foundry.png" style="width:18%; min-width:180px;" class="imgcenter" alt="...">
-  <img src="images/title.png" style="width:50%; min-width:300px" class="imgcenter" alt="..."><br>
-  <h1 align=center>Event online platform</h1> 
+  <img src="images/title.png" style="width:50%; min-width:300px" class="imgcenter" alt="...">
 </div>
 
 
@@ -33,8 +32,18 @@
   </div>
 
 
+ <div class="col-sm-6 col-md-4">
+    <a href="/team" class="boxa" ><div class="box">
+      <div class="caption">
+        <p>
+          <h2>TEAM</h2>
+        </p>
+      </div>
+    </div></a>
+  </div>
+
   <div class="col-sm-6 col-md-4">
-   <a href="/business-model" class="boxa"> <div class="boxsoon2">
+   <a href="/business-model" class="boxa"> <div class="box2">
       <div class="caption">
         <p>
           <h2>BUSINESS MODEL</h2>
@@ -43,8 +52,23 @@
     </div></a>
   </div>
 
+
+
   <div class="col-sm-6 col-md-4">
-   <a href="/customer-validation" class="boxa"> <div class="boxsoon2">
+    <a href="http://www.theuselessweb.com/" target="_blank" class="boxa" ><div class="boxbreak2">
+      <div class="caption">
+        <p> 
+          <h2>
+          <img src="images/mug4.png" style="width:36px;" class="imgcenter"  alt="..."><br>
+          Need<br>a break ?</h2>
+        </p>
+      </div>
+    </div></a>
+  </div>
+
+
+<div class="col-sm-6 col-md-4">
+   <a href="/customer-validation" class="boxa"> <div class="box2">
       <div class="caption">
         <p>
           <h2>CUSTOMER VALIDATION</h2>
@@ -55,29 +79,7 @@
 
 
   <div class="col-sm-6 col-md-4">
-    <a href="/scalability" class="boxa" ><div class="boxsoon">
-      <div class="caption">
-        <p>
-          <h2>SCALABILITY</h2>
-        </p>
-      </div>
-    </div></a>
-  </div>
-
-
-  <div class="col-sm-6 col-md-4">
-    <a href="/technology" class="boxa" ><div class="boxsoon">
-      <div class="caption">
-        <p>
-          <h2>TECHNOLOGY</h2>
-        </p>
-      </div>
-    </div></a>
-  </div>
-
-
-  <div class="col-sm-6 col-md-4">
-   <a href="/design" class="boxa"> <div class="boxsoon">
+   <a href="/design" class="boxa"> <div class="box">
       <div class="caption">
         <p>
           <h2>DESIGN</h2>
@@ -89,10 +91,10 @@
 
   <div class="col-sm-6 col-md-4">
     <a href="/demo" class="boxa">
-      <div class="boxsoon">
+      <div class="box2">
       <div class="caption">
         <p>
-          <h2>DEMO</h2>
+          <h2>DEMO / PITCH<br>PRESENTATION</h2>
         </p>
       </div>
     </div></a>
@@ -100,10 +102,10 @@
 
 
   <div class="col-sm-6 col-md-4">
-    <a href="/pitch-presentation" class="boxa"><div class="boxsoon2">
+    <a href="/have-fun" class="boxa"><div class="box">
       <div class="caption">
         <p>
-          <h2>PITCH<br>PRESENTATION</h2>
+          <h2>Final Advice</h2>
         </p>
       </div>
     </div></a>
