--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -278,7 +278,7 @@
 					<div class="progB chart" data-percent="40"  data-animate="3500">
 						<div class="chart chart-content">
 							<div class="percentage" data-percent="40">
-							  <span class="percent">40</span>
+							  <span class="percent">30</span>
 							</div>
 						</div>
 					</div>
@@ -296,7 +296,7 @@
 						</div>
 					</div>
 					<div class="textP">
-						<h3>Of the year, exploring</h3>
+						<h3>Of the year, exploring new ideas</h3>
 						<p></p>
 					</div>
 				</div>
