--- a/app/views/home/pitch-presentation.html.erb
+++ b/app/views/home/pitch-presentation.html.erb
@@ -1,6 +1,6 @@
 <body><div class="container-fluid">
 	<table style="width:100%">
-<div id="left"><h3>Pitch<br>Presentation</h3></div>
+<div id="left"><h3>Demo / Pitch<br>Presentation</h3></div>
 <div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
 	</div>
@@ -8,12 +8,43 @@
 </table>
    
 <div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
-	</div>
-	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
 
+	<div class="col-md-2" id="menuleft" >
+		<a id="b4"  href="demo" ><h4>Test your app</h4></a>
+		<a id="b1" class="activ" href="pitch-presentation"><h4>Pitch your idea</h4></a>
+		<a id="b1" class="tools" href="https://www.emaze.com/" target="_blank"><h4>Use EMaze</h4></a>
+		<a id="b1" class="tools" href="https://prezi.com/" target="_blank"><h4>Or Prezi</h4></a>
+	</div>
+
+	 <div class="col-md-10">
+<div class="insidecontent" >
+	 		
+
+	 		<div class="checkout">"Over the past few years, I’ve seen hundreds of pitches and demos.<br>One of the most painful scenarios I’ve witnessed is when someone creates a killer hack, but the presentation falls flat, leaving the judges and audience with no idea of the true awesomeness of the hack."</div>
+	 		<div class="brief">
+	 		<span class="italic" style="text-align:center;">_____<br>Posted on June 25, 2013 by Elmer Thomas</span><br><span class="italic">We found Elmer's advices on <a href="https://sendgrid.com/blog/principles-of-a-killer-hackathon-demo/" style="color:#fff;" target="_blank">SendGrid</a></span>
+	 		</div>
+
+
+	 		<div class="brief"><h2 class="pages">Eye Communication</h2><br>Eye contact is one of the best ways to establish a connection with your audience. Of course, this is difficult when you have more than 10 people in the audience, as most people tend to repeatedly scan the audience, including myself. One technique is to pick several people in the audience to whom you will direct your gaze, but for no longer than three to five seconds at a time to avoid discomfort.</div>
+
+	 		<div class="brief"><h2 class="pages">Posture and Movement</h2><br>In order to convey confidence and credibility, it’s important to maintain a healthy, strong posture. Move away from the podium and walk towards those that ask questions. If you encounter a hostile question, acknowledge the asker, but then answer while looking/walking towards other members of the audience. Take the time to consider the effect of posture and movement on your presentation as you flesh out the final details.</div>
+
+	 		<div class="brief"><h2 class="pages">Gestures and Facial Expressions</h2><br>Use large gestures to emphasize your key points. Smile as much as you can while talking and unleash the untapped power of smiling. Use other facial expressions to emphasize your key points as appropriate.</div>
+
+	 		<div class="brief"><h2 class="pages">Voice and Vocal Clarity</h2><br>Be sure that your voice projects as far into the audience as possible without overwhelming those in the front. Practice with a friend standing in the back of the room, if possible. Vary your tone and pitch as you emphasize/de-emphasize key points.</div>
+
+	 		<div class="brief"><h2 class="pages">Language and Pausing</h2><br>Use language appropriate to your audience, avoiding jargon. Remember, you are seeking to convey your message to the audience as clear and simple as you can. You want the audience to understand what you are saying with little effort.<br><br>
+Don’t be afriad of pausing during your presention. It’s a good strategy to stop and collect your thoughts when needed or to let a particular key point sink in. You may want to syncronize your pauses with key imagery. Know that a pause that seems like minutes to you, will seem like seconds to the audience. Avoid Um and other similar filler noises, and instead simply pause. Silence is golden.</div>
+
+	 		<div class="brief"><h2 class="pages">Dress and Appearance</h2><br>For most of us developers, dressing appropriately means a nice T-shirt with jeans and comfortable shoes. While not the most important element of your presentation, remember that many will judge quickly on apperance first.</div>
+	 		
+
+
+			</div>
+
+
+	 	</div>
 
 </div>
 </div></body>
