--- a/app/views/home/checklist.html.erb
+++ b/app/views/home/checklist.html.erb
@@ -13,6 +13,7 @@
 		<a id="b4" href="brief"  onClick="loadFrame(this)"><h4>Brief</h4></a>
 		<a id="b1" href="agenda" onClick="loadFrame(this)"><h4>Agenda</h4></a>
 		<a id="b1" href="checklist" class="activ" ><h4>Check List</h4></a>
+		<a id="b2" href="judges"  ><h4>Judges</h4></a>
 		<a id="b2" href="criteria" onClick="loadFrame(this)"><h4>Criteria</h4></a>
 		<a id="b3" href="prizes" onClick="loadFrame(this)"><h4>Prizes</h4></a>
 	</div>
